# portal-engine-demo

./: .gitignore  README.md
portals/: .gitignore  CMakeLists.txt
portals/data/: make_package.py
portals/data/res/: dooro.img  enemy.img  enemy0.img  enemy1.img  gamebg.img  pistolf.img  portable.img  shot2.img  target.img  title_bg.img  wall.img
portals/game/: Makefile  Makefile.DOS
portals/game/include/: 3D.h  Engine.h  FixP.h  Graphics.h  LoadBitmap.h  Renderer.h  SpyTravel.h  Vec2i.h  VisibilityStrategy.h
portals/game/res/: Carmen.txt  Elias.txt  Jean.txt  Juan.txt  Lina.txt  Pau.txt  Ricardo.txt  Sofia.txt  ceiling.img  clue.img  crate.img  door.img  doorc.img  floor.img  font.img  muzzle.img  noclue.img  pistol.img  player.img  shot.img  table.img  tile.img
portals/game/src/: 3D.cpp  CarMenu.cpp  Crawler.cpp  FixP.cpp  Graphics.cpp  LoadBitmap.cpp  Main.cpp  MainMenu.cpp  RendererDOS.cpp  RendererSDL.cpp  RendererSDL2.cpp  SpyTravel.cpp  Vec2i.cpp  VisibilityStrategy.cpp
